@@ -7,19 +7,6 @@
 
 ;;; ===========================================================================
 
-;; Define the class <slot-definition>.
-(macrolet ((form () *<slot-definition>-defclass*))
-  (form))
-
-;; Define the class <direct-slot-definition>.
-(macrolet ((form () *<direct-slot-definition>-defclass*))
-  (form))
-
-;; Define the class <effective-slot-definition>.
-(macrolet ((form () *<effective-slot-definition>-defclass*))
-  (form))
-
-
 ;;; Lift the initialization protocol.
 
 (defmethod initialize-instance ((slotdef slot-definition) &rest args
@@ -63,51 +50,21 @@
 
 ;;; ---------------------------------------------------------------------------
 
-;; Define the class <standard-slot-definition>.
-(macrolet ((form () *<standard-slot-definition>-defclass*))
-  (form))
-
-;;; ---------------------------------------------------------------------------
-
-;; Define the class <standard-direct-slot-definition>.
-(defparameter <standard-direct-slot-definition>
-  (macrolet ((form () *<standard-direct-slot-definition>-defclass*))
-    (form)))
-(replace-class-version (find-class 'standard-direct-slot-definition)
-                       *<standard-direct-slot-definition>-class-version*)
 (defmethod initialize-instance ((slotdef standard-direct-slot-definition) &rest args)
   (apply #'initialize-instance-<standard-direct-slot-definition> slotdef args))
 
 ;;; ---------------------------------------------------------------------------
 
-;; Define the class <standard-effective-slot-definition>.
-(defparameter <standard-effective-slot-definition>
-  (macrolet ((form () *<standard-effective-slot-definition>-defclass*))
-    (form)))
-(replace-class-version (find-class 'standard-effective-slot-definition)
-                       *<standard-effective-slot-definition>-class-version*)
 (defmethod initialize-instance ((slotdef standard-effective-slot-definition) &rest args)
   (apply #'initialize-instance-<standard-effective-slot-definition> slotdef args))
 
 ;;; ---------------------------------------------------------------------------
 
-;; Define the class <structure-direct-slot-definition>.
-(defparameter <structure-direct-slot-definition>
-  (macrolet ((form () *<structure-direct-slot-definition>-defclass*))
-    (form)))
-(replace-class-version (find-class 'structure-direct-slot-definition)
-                       *<structure-direct-slot-definition>-class-version*)
 (defmethod initialize-instance ((slotdef structure-direct-slot-definition) &rest args)
   (apply #'initialize-instance-<structure-direct-slot-definition> slotdef args))
 
 ;;; ---------------------------------------------------------------------------
 
-;; Define the class <structure-effective-slot-definition>.
-(defparameter <structure-effective-slot-definition>
-  (macrolet ((form () *<structure-effective-slot-definition>-defclass*))
-    (form)))
-(replace-class-version (find-class 'structure-effective-slot-definition)
-                       *<structure-effective-slot-definition>-class-version*)
 (defun structure-effective-slot-definition-initff (slotdef)
   (slot-value slotdef 'initff))
 (defun (setf structure-effective-slot-definition-initff) (new-value slotdef)
