@@ -1,5 +1,13 @@
 2004-06-05  Bruno Haible  <bruno@clisp.org>
 
+	* clos-class3.lisp: Define <slot-definition> and its subclasses and
+	<eql-specializer> here.
+	* clos-slotdef2.lisp: Move the class definition forms to
+	clos-class3.lisp.
+	* clos-specializer2.lisp: Likewise.
+
+2004-06-05  Bruno Haible  <bruno@clisp.org>
+
 	All specializers must be types.
 	* type.lisp (typep, subtype-integer): Treat EQL-specializers like
 	EQL forms.
